--- a/Final.Rmd
+++ b/Final.Rmd
@@ -5,6 +5,10 @@ date: "11/25/2018"
 output: html_document
 ---
 
+# Introduction
+
+# Data
+
 ```{r setup, include=FALSE}
 if (!require("readr")) install.packages("readr")
 library(readr)
@@ -94,9 +98,8 @@ dog.info <- function(url){
 }
 ```
 
-# Put Extracted Data Into A Dataframe
-
 ```{r}
+# Put Extracted Data Into A Dataframe
 #Function to extract information for every star on an individual page:
 stars_col <- function(col3) {
   stars = c()
@@ -152,7 +155,6 @@ final_stars_data[final_stars_data == 4] <- 3
 final_stars_data[final_stars_data == 5] <- 4
 ```
 
-
 ```{r}
 #Get Personality Blurb Binded On:
 
@@ -173,39 +175,43 @@ for (i in 1:length(links)) {
      i == 173 | i == 175 | i == 193 | i == 194 | i == 196 | i == 205 | 
      i == 206) {
     dog_info = dog.info(links[i])[5]
-    col = as.data.frame(paste(unlist(dog_info[1]), collapse=''))
+    col <- paste(unlist(dog_info[1]), collapse='')
+    col <- as.data.frame(paste0(substr(col, start = 1, stop = 400),"..."))
      }
   else {
-    col = as.data.frame(dog.info(links[i])[2]) 
+    col <- dog.info(links[i])[2]
+    col <- as.data.frame(paste0(substr(col, start = 1, stop = 400),"..."))
     }
   datalist[i] <- col
 }
 blurbs = as.data.frame(unlist(datalist))
 colnames(blurbs) <- c("PersonalityBlurb")
-blurbs_and_stars_data = cbind(final_stars_data,blurbs)
+rownames(blurbs) <- rownames(final_stars_data)
+blurbs <- rownames_to_column(blurbs)
+
+#Insert Dog Website Link:
+web_blurbs <- cbind(blurbs,as.data.frame(links))
 ```
 
-#Get Picture Link
-
 ```{r}
-library(rvest)
+#Get Picture Link
 url = "https://dogtime.com/dog-breeds"
 download.file(url, destfile = "scrapedpage.html", quiet=TRUE)
 content <- read_html("scrapedpage.html")
 
 imagelist = list()
 
+#Figure out which do not have the same tag
+imagelist = list()
 for (i in 1:length(links)) {
-  image_links = as.data.frame(dog.info(links[i])[6])
-  imagelist[i] <- image_links
+  col = as.data.frame(dog.info(links[i])[6])
+  imagelist[i] <- col
 }
-
-image_links = as.data.frame(unlist(image_list))
-colnames(image_links) <- c("ImageLinks")
-links_and_blurbs = cbind(blurbs,image_links)
+imagelist = as.data.frame(unlist(datalist))
+colnames(imagelist) <- c("Image")
+web_blurbs <- cbind(web_blurbs,imagelist)
+rownames(web_blurbs) <- NULL
 ```
-
-Error in open.connection(x, "rb") : HTTP error 504.??? 
 
 ```{r}
 #Get Extra Information on Stars Meanings
@@ -216,6 +222,389 @@ rownames(star_des) = c(1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,
 colnames(star_des) = c("Descriptions")
 ```
 
+```{r}
+#Final Manipulation of Final Stars Data so it works in Next Section
+final_stars_data <- rownames_to_column(final_stars_data,"Doggo")
+```
 
-The important traits are: a tendency to share possessions, love of running outside, likeliness of being destructive, and ability to get along with others.
+# Mixed Membership Modeling
+
+```{r}
+#Mixed Membership Modeling - I created a function since I apply it to various data sets
+mixedMemfunction = function(Total, J, K, dataset) {
+  dataset[dataset == 0] <- 5
+  dataset[dataset == 1] <- 6
+  dataset[dataset == 2] <- 7
+  dataset[dataset == 3] <- 8
+  dataset[dataset == 4] <- 9
+  dataset[dataset == 5] <- 4
+  dataset[dataset == 6] <- 3
+  dataset[dataset == 7] <- 2
+  dataset[dataset == 8] <- 1
+  dataset[dataset == 9] <- 0
+  Rj <- rep(1, J)
+  Nijr <- array(1, dim = c(Total, J, max(Rj))) #multinomial so rank is 1 for each
+  Vj <- rep(5, J) #5 choices for each variable 
+  alpha <- rep(.2, K) #initalize alpha to .2
+  dist <- rep("multinomial", J) #all variables are multinomial 
+  obs <- array(0, dim = c(Total, J, max(Rj), max(Nijr)))
+  obs[, , 1, 1] <- as.matrix(dataset)
+  set.seed(112718)
+  theta <- array(0, dim = c(J, K, max(Vj))) 
+  for (j in 1:J) {
+    theta[j, , ] <- gtools::rdirichlet(K, rep(.8, Vj[j])) 
+  }
+  initial <- mixedMemModel(Total = Total, J = J, Rj = Rj,
+                         Nijr = Nijr, K = K, Vj = Vj, alpha = alpha,
+                         theta = theta, dist = dist, obs = obs)
+  computeELBO(initial)
+  st = proc.time()
+  out <- mmVarFit(initial, printStatus = 1, printMod = 25)
+  lambda.point <- out$phi / rowSums(out$phi)
+  new_data1 = list()
+  
+  for (i in 1:K) {
+    popAgree <- out$theta[, i, 1]
+    new_data1[[i]] <- popAgree 
+  }
+  
+  new_groups <- as.data.frame(new_data1)
+  rownames(new_groups) <- colnames(dataset)
+  colnames(new_groups) <- as.vector(1:K)
+  new_groups <- rownames_to_column(new_groups, "Variable")
+  
+  new_groups_t = as.data.frame(t(new_groups),stringsAsFactors = FALSE)
+  colnames(new_groups_t) <- as.character(unlist(new_groups_t[1,]))
+  new_data1 = new_groups_t[-1, ] 
+  new_data1$AffectionatewithFamily <- as.numeric(new_data1$AffectionatewithFamily)
+  new_data1$IncrediblyKidFriendlyDogs <-as.numeric(new_data1$IncrediblyKidFriendlyDogs)
+  new_data1$DogFriendly <-as.numeric(new_data1$DogFriendly)
+  new_data1$FriendlyTowardStrangers <-as.numeric(new_data1$FriendlyTowardStrangers)
+  new_data1$Intensity <-as.numeric(new_data1$Intensity)
+  new_data1$EasyToTrain <-as.numeric(new_data1$EasyToTrain)
+  new_data1$PotentialForPlayfulness <-as.numeric(new_data1$PotentialForPlayfulness)
+  new_data1$EnergyLevel <-as.numeric(new_data1$EnergyLevel)
+  new_data1$WanderlustPotential <-as.numeric(new_data1$WanderlustPotential)
+  new_data1$Intelligence <-as.numeric(new_data1$Intelligence)
+  
+  for (i in 1:K) {
+    new_data1$FriendlinessScore[i] <- sum(as.numeric(new_data1$AffectionatewithFamily[i]),new_data1$IncrediblyKidFriendlyDogs[i],new_data1$IncrediblyKidFriendlyDogs[i],new_data1$FriendlyTowardStrangers[i])
+    new_data1$PlayScore[i] <- sum(new_data1$PotentialForPlayfulness[i],new_data1$EnergyLevel[i])
+    new_data1$EasyTrainScore[i] <- sum(new_data1$EasyToTrain[i], new_data1$Intelligence)
+}
+  
+  new_data1 <- rownames_to_column(new_data1,"Variable")
+  
+  indiv_in_cluster <- as.data.frame(lambda.point)
+  rownames(indiv_in_cluster) <- rownames(dataset)
+  colnames(indiv_in_cluster) <- 1:K
+  indiv_in_cluster <- rownames_to_column(indiv_in_cluster,"Variable")
+  
+  return(list(new_data1,indiv_in_cluster))
+}
+```
+
+
+```{r, eval = FALSE,warning = FALSE,message = FALSE}
+
+# Dataframe 1: House + Cold Weather + New Owner Doggos
+data1 <- final_stars_data %>% 
+  filter(GoodForNoviceOwners == 2 | GoodForNoviceOwners == 3 | GoodForNoviceOwners == 4) %>% 
+  filter(ToleratesColdWeather == 2 | ToleratesColdWeather == 3 | ToleratesColdWeather == 4)
+
+data1 <- data1 %>%
+  select(Doggo,AffectionatewithFamily,IncrediblyKidFriendlyDogs,DogFriendly,FriendlyTowardStrangers,Intensity,EnergyLevel,PotentialForPlayfulness,EasyToTrain,WanderlustPotential,Intelligence)
+data1 <- column_to_rownames(data1,"Doggo")
+
+data1_call <-  mixedMemfunction(Total = nrow(data1),J = length(data1), K = 20,dataset = data1)
+house_cold_new_groups <- data1_call[[1]]
+house_cold_new_dogs <- data1_call[[2]]
+
+# Dataframe 2: House + Hot Weather + New Owner Doggos
+data2 <- final_stars_data %>% 
+  filter(GoodForNoviceOwners == 2 | GoodForNoviceOwners == 3 | GoodForNoviceOwners == 4) %>% 
+  filter(ToleratesHotWeather == 2 | ToleratesHotWeather == 3 | ToleratesHotWeather == 4)
+
+data2 <- data2 %>%
+  select(Doggo,AffectionatewithFamily,IncrediblyKidFriendlyDogs,DogFriendly,FriendlyTowardStrangers,Intensity,EnergyLevel,PotentialForPlayfulness,EasyToTrain,WanderlustPotential,Intelligence)
+data2 <- column_to_rownames(data2,"Doggo")
+  
+data1_call2 <-  mixedMemfunction(Total = nrow(data2), J = length(data2), K = 20,dataset = data2)
+house_hot_new_groups <- data1_call2[[1]]
+house_hot_new_dogs <- data1_call2[[2]]
+
+# Dataframe 3: House + Cold Weather + Old Owner Doggos
+
+data3 <- final_stars_data %>% 
+  filter(ToleratesColdWeather == 2 | ToleratesColdWeather == 3 | ToleratesColdWeather == 4)
+
+data3 <- data3 %>%
+  select(Doggo,AffectionatewithFamily,IncrediblyKidFriendlyDogs,DogFriendly,FriendlyTowardStrangers,Intensity,EnergyLevel,PotentialForPlayfulness,EasyToTrain,WanderlustPotential,Intelligence)
+data3 <- column_to_rownames(data3,"Doggo")
+
+data1_call3 <-  mixedMemfunction(Total = nrow(data3),J = length(data3), K = 20,dataset = data3)
+house_cold_old_groups <- data1_call3[[1]]
+house_cold_old_dogs <- data1_call3[[2]]
+
+# Dataframe 4: House + Hot Weather + Old Owner Doggos
+
+data4 <- final_stars_data %>%
+  filter(ToleratesHotWeather == 2 | ToleratesHotWeather == 3 | ToleratesHotWeather == 4)
+
+data4 <- data4 %>%
+  select(Doggo,AffectionatewithFamily,IncrediblyKidFriendlyDogs,DogFriendly,FriendlyTowardStrangers,Intensity,EnergyLevel,PotentialForPlayfulness,EasyToTrain,WanderlustPotential,Intelligence)
+data4 <- column_to_rownames(data4,"Doggo")
+
+data1_call4 <-  mixedMemfunction(Total = nrow(data4),J = length(data4), K = 20,dataset = data4)
+house_hot_old_groups <- data1_call4[[1]]
+house_hot_old_dogs <- data1_call4[[2]]
+
+# Dataframe 5: Apartment/Dorm + Hot Weather + New Owner Doggos
+
+data5 <- final_stars_data %>% 
+  filter(AdaptsWelltoApartmentLiving == 2 | AdaptsWelltoApartmentLiving == 3 | AdaptsWelltoApartmentLiving == 4) %>%
+  filter(GoodForNoviceOwners == 2 | GoodForNoviceOwners == 3 | GoodForNoviceOwners == 4) %>% 
+  filter(ToleratesHotWeather == 2 | ToleratesHotWeather == 3 | ToleratesHotWeather == 4)
+
+data5 <- data5 %>%
+  select(Doggo,AffectionatewithFamily,IncrediblyKidFriendlyDogs,DogFriendly,FriendlyTowardStrangers,Intensity,EnergyLevel,PotentialForPlayfulness,EasyToTrain,WanderlustPotential,Intelligence)
+data5 <- column_to_rownames(data5,"Doggo")
+
+data1_call5 <-  mixedMemfunction(Total = nrow(data5),J = length(data5), K = 20,dataset = data5)
+apart_hot_new_groups <- data1_call5[[1]]
+apart_hot_new_dogs <- data1_call5[[2]]
+
+# Dataframe 6: Apartment/Dorm + Cold Weather + New Owner Doggos
+data6 <- final_stars_data %>% 
+  filter(AdaptsWelltoApartmentLiving == 2 | AdaptsWelltoApartmentLiving == 3 | AdaptsWelltoApartmentLiving == 4) %>%
+  filter(GoodForNoviceOwners == 2 | GoodForNoviceOwners == 3 | GoodForNoviceOwners == 4) %>% 
+  filter(ToleratesColdWeather == 2 | ToleratesColdWeather == 3 | ToleratesColdWeather == 4)
+
+data6 <- data6 %>%
+  select(Doggo,AffectionatewithFamily,IncrediblyKidFriendlyDogs,DogFriendly,FriendlyTowardStrangers,Intensity,EnergyLevel,PotentialForPlayfulness,EasyToTrain,WanderlustPotential,Intelligence)
+data6 <- column_to_rownames(data6,"Doggo")
+
+data1_call6 <-  mixedMemfunction(Total = nrow(data6),J = length(data6), K = 20,dataset = data6)
+apart_cold_new_groups <- data1_call6[[1]]
+apart_cold_new_dogs <- data1_call6[[2]]
+
+# Dataframe 7: Apartment/Dorm + Hot Weather + Old Owner Doggos
+
+data7 <- final_stars_data %>% 
+  filter(AdaptsWelltoApartmentLiving == 2 | AdaptsWelltoApartmentLiving == 3 | AdaptsWelltoApartmentLiving == 4) %>%
+  filter(ToleratesHotWeather == 2 | ToleratesHotWeather == 3 | ToleratesHotWeather == 4)
+
+data7 <- data7 %>%
+  select(Doggo,AffectionatewithFamily,IncrediblyKidFriendlyDogs,DogFriendly,FriendlyTowardStrangers,Intensity,EnergyLevel,PotentialForPlayfulness,EasyToTrain,WanderlustPotential,Intelligence)
+data7 <- column_to_rownames(data7,"Doggo")
+
+data1_call7 <-  mixedMemfunction(Total = nrow(data7),J = length(data7), K = 20,dataset = data7)
+apart_hot_old_groups <- data1_call7[[1]]
+apart_hot_old_dogs <- data1_call7[[2]]
+
+# Dataframe 8: Apartment/Dorm + Cold Weather + Old Owner Doggos
+
+data8 <- final_stars_data %>% 
+  filter(AdaptsWelltoApartmentLiving == 2 | AdaptsWelltoApartmentLiving == 3 | AdaptsWelltoApartmentLiving == 4) %>%
+  filter(ToleratesColdWeather == 2 | ToleratesColdWeather == 3 | ToleratesColdWeather == 4)
+
+data8 <- data8 %>%
+  select(Doggo,AffectionatewithFamily,IncrediblyKidFriendlyDogs,DogFriendly,FriendlyTowardStrangers,Intensity,EnergyLevel,PotentialForPlayfulness,EasyToTrain,WanderlustPotential,Intelligence)
+data8 <- column_to_rownames(data8,"Doggo")
+
+data1_call8 <-  mixedMemfunction(Total = nrow(data8),J = length(data8), K = 20,dataset = data8)
+apart_cold_old_groups <- data1_call8[[1]]
+apart_cold_old_dogs <- data1_call8[[2]]
+
+#Dataframe 9: House + Normal Weather + Old Owner
+
+data9 <- final_stars_data %>%
+  select(Doggo,AffectionatewithFamily,IncrediblyKidFriendlyDogs,DogFriendly,FriendlyTowardStrangers,Intensity,EnergyLevel,PotentialForPlayfulness,EasyToTrain,WanderlustPotential,Intelligence)
+data9 <- column_to_rownames(data9,"Doggo")
+
+data1_call9 <-  mixedMemfunction(Total = nrow(data9),J = length(data9), K = 20,dataset = data9)
+house_norm_old_groups <- data1_call9[[1]]
+house_norm_old_dogs <- data1_call9[[2]]
+
+#Dataframe 10: House + Normal Weather + New Owner
+
+data10 <- final_stars_data %>% 
+  filter(GoodForNoviceOwners == 2 | GoodForNoviceOwners == 3 | GoodForNoviceOwners == 4)
+
+data10 <- data10 %>%
+  select(Doggo,AffectionatewithFamily,IncrediblyKidFriendlyDogs,DogFriendly,FriendlyTowardStrangers,Intensity,EnergyLevel,PotentialForPlayfulness,EasyToTrain,WanderlustPotential,Intelligence)
+data10 <- column_to_rownames(data10,"Doggo")
+
+data1_call10 <-  mixedMemfunction(Total = nrow(data10),J = length(data10), K = 20,dataset = data10)
+house_norm_new_groups <- data1_call10[[1]]
+house_norm_new_dogs <- data1_call10[[2]]
+
+#Dataframe 11: Apartment/Dorm + Normal Weather + Old Owner
+data11 <- final_stars_data %>% 
+  filter(AdaptsWelltoApartmentLiving == 2 | AdaptsWelltoApartmentLiving == 3 | AdaptsWelltoApartmentLiving == 4)
+
+data11 <- data11 %>%
+  select(Doggo,AffectionatewithFamily,IncrediblyKidFriendlyDogs,DogFriendly,FriendlyTowardStrangers,Intensity,EnergyLevel,PotentialForPlayfulness,EasyToTrain,WanderlustPotential,Intelligence)
+data11 <- column_to_rownames(data11,"Doggo")
+
+data1_call11 <-  mixedMemfunction(Total = nrow(data11),J = length(data11), K = 20,dataset = data11)
+apart_norm_old_groups <- data1_call11[[1]]
+apart_norm_old_dogs <- data1_call11[[2]]
+
+#Dataframe 12: Apartment/Dorm + Normal Weather + New Owner
+
+data12 <- final_stars_data %>% 
+  filter(GoodForNoviceOwners == 2 | GoodForNoviceOwners == 3 | GoodForNoviceOwners == 4) %>%
+  filter(AdaptsWelltoApartmentLiving == 2 | AdaptsWelltoApartmentLiving == 3 | AdaptsWelltoApartmentLiving == 4)
+
+data12 <- final_stars_data %>%
+  select(Doggo,AffectionatewithFamily,IncrediblyKidFriendlyDogs,DogFriendly,FriendlyTowardStrangers,Intensity,EnergyLevel,PotentialForPlayfulness,EasyToTrain,WanderlustPotential,Intelligence)
+data12 <- column_to_rownames(data12,"Doggo")
+
+data1_call12 <-  mixedMemfunction(Total = nrow(data12), J = length(data12), K = 20, dataset = data12)
+apart_norm_new_groups <- data1_call12[[1]]
+apart_norm_new_dogs <- data1_call12[[2]]
+
+write.csv(house_cold_new_groups,"house_cold_new_groups.csv")
+write.csv(house_cold_new_dogs,"house_cold_new_dogs.csv")
+write.csv(house_hot_new_groups,"house_hot_new_groups.csv")
+write.csv(house_hot_new_dogs,"house_hot_new_dogs.csv")
+write.csv(house_cold_old_groups,"house_cold_old_groups.csv")
+write.csv(house_cold_old_dogs,"house_cold_old_dogs.csv")
+write.csv(house_hot_old_groups,"house_hot_old_groups.csv")
+write.csv(house_hot_old_dogs,"house_hot_old_dogs.csv")
+write.csv(apart_hot_new_groups,"apart_hot_new_groups.csv")
+write.csv(apart_hot_new_dogs,"apart_hot_new_dogs.csv")
+write.csv(apart_cold_new_groups,"apart_cold_new_groups.csv")
+write.csv(apart_cold_new_dogs,"apart_cold_new_dogs.csv")
+write.csv(apart_hot_old_groups,"apart_hot_old_groups.csv")
+write.csv(apart_hot_old_dogs,"apart_hot_old_dogs.csv")
+write.csv(apart_cold_old_groups,"apart_cold_old_groups.csv")
+write.csv(apart_cold_old_dogs,"apart_cold_old_dogs.csv")
+write.csv(house_norm_old_groups,"house_norm_old_groups.csv")
+write.csv(house_norm_old_dogs,"house_norm_old_dogs.csv")
+write.csv(house_norm_new_groups,"house_norm_new_groups.csv")
+write.csv(house_norm_new_dogs,"house_norm_new_dogs.csv")
+write.csv(apart_norm_old_groups,"apart_norm_old_groups.csv")
+write.csv(apart_norm_old_dogs,"apart_norm_old_dogs.csv")
+write.csv(apart_norm_new_groups,"apart_norm_new_groups.csv")
+write.csv(apart_norm_new_dogs,"apart_norm_new_dogs.csv")
+```
+
+```{r}
+#Relabel to Get Cluster Matches
+relabel <- function(dataset) {
+  for(i in 1:nrow(dataset)){
+    for(j in 1:ncol(dataset)) {
+      if(dataset[i,j] < 0.2) {
+          dataset[i,j] = 1
+      }
+      if(dataset[i,j] >= 0.2 & dataset[i,j] < 0.4) {
+          dataset[i,j] = 2
+      }
+      if(dataset[i,j] >= 0.4 & dataset[i,j] < 0.6) {
+          dataset[i,j] = 3
+      }
+      if(dataset[i,j] >= 0.6 & dataset[i,j] < 0.8) {
+          dataset[i,j] = 4
+      }
+      if(dataset[i,j] >= 0.8 & dataset[i,j] <1) {
+          dataset[i,j] = 5
+      }
+    }
+  }
+  return(dataset)
+}
+
+#Pick the Best Cluster
+pick_cluster <- function(peers,wonderlust,energy,intense,important,dataset) {
+  for(i in 1:nrow(dataset)) {
+  dataset$cluster_score[i] <- sum(
+    (dataset$WanderlustPotential[i]-wonderlust)^2,
+    (dataset$EnergyLevel[i]-energy)^2,
+    (dataset$Intensity[i]-intense)^2,
+    (dataset$DogFriendly[i]-peers)^2)
+  }
+  
+  score_ordered = dataset[order(dataset$cluster_score),]
+  score_ordered = score_ordered[1:5,]
+  
+  if(important == 1) {
+    score_ordered <- score_ordered[1:5,]
+    score_ordered <- score_ordered[order(score_ordered$FriendlinessScore),]
+    cluster <- score_ordered$Variable[5]
+  }
+  
+  if(important == 2) {
+    score_ordered <- score_ordered[1:5,]
+    score_ordered <- score_ordered[order(score_ordered$PlayScore),]
+    cluster <- score_ordered$Variable[5]
+  }
+  
+  if(important == 3) {
+    score_ordered <- score_ordered[1:5,]
+    score_ordered <- score_ordered[order(score_ordered$EasyTrainScore),]
+    cluster <- score_ordered$Variable[5]
+  }
+  return(as.numeric(cluster))
+}
+
+#Putting Whole Function Together
+shiny_function <- function(dwelling,weather,firsttime,important,intense,energy,peers,wonderlust) {
+  if(dwelling == 1 & weather == 1 & firsttime == 1 | dwelling == 3 & weather == 1 & firsttime == 1) {
+  dataset <- apart_cold_new_groups
+  dog_data <- apart_cold_new_dogs
+  }
+  if(dwelling == 1 & weather == 1 & firsttime == 2 | dwelling == 3 & weather == 1 & firsttime == 2) {
+  dataset <- apart_cold_old_groups
+  dog_data <- apart_cold_old_dogs
+  }
+  if(dwelling == 1 & weather == 2 & firsttime == 1 | dwelling == 3 & weather == 2 & firsttime == 1){
+  dataset <- apart_hot_new_groups
+  dog_data <- apart_hot_new_dogs
+  }
+  if(dwelling == 1 & weather == 2 & firsttime == 2 | dwelling == 3 & weather == 2 & firsttime == 2) {
+  dataset <- apart_hot_old_groups
+  dog_data <- apart_hot_old_dogs
+  }
+  if(dwelling == 1 & weather == 3 & firsttime == 1 | dwelling == 3 & weather == 3 & firsttime == 1) {
+  dataset <- apart_norm_new_groups
+  dog_data <- apart_norm_new_dogs
+  }
+  if(dwelling == 1 & weather == 3 & firsttime == 2 | dwelling == 3 & weather == 3 & firsttime == 2) {
+  dataset <- apart_norm_old_groups
+  dog_data <- apart_norm_old_dogs
+  }
+  if(dwelling == 2 & weather == 1 & firsttime == 1) {
+  dataset <- house_cold_new_groups
+  dog_data <- house_cold_new_dogs
+  }
+  if(dwelling == 2 & weather == 1 & firsttime == 2) {
+  dataset <- house_cold_old_groups
+  dog_data <- house_cold_old_dogs
+  }
+  if(dwelling == 2 & weather == 2 & firsttime == 1){
+  dataset <- house_hot_new_groups
+  dog_data <- house_hot_new_dogs
+  }
+  if(dwelling == 2 & weather == 2 & firsttime == 2) {
+  dataset <- house_hot_old_groups
+  dog_data <- house_hot_old_dogs
+  }
+  if(dwelling == 2 & weather == 3 & firsttime == 1) {
+  dataset <- house_norm_new_groups
+  dog_data <- house_norm_new_dogs
+  }
+  if(dwelling == 2 & weather == 3 & firsttime == 2) {
+  dataset <- house_norm_old_groups
+  dog_data <- house_norm_old_dogs
+  }
+  
+  cluster <- pick_cluster(peers,wonderlust,energy,intense,important,relabel(dataset))
+  ans <- final_output(cluster,dog_data)
+  ans <- ans[complete.cases(ans),]
+  
+  return(ans)
+}
+```
 
